syntax = "proto3";

package collection;

option go_package = "github.com/RexGreenway/CollectionApp/internal/genproto";

// Collectible Items
enum ItemType {
    ITEM_UNSPECIFIED = 0;
    ITEM_FILM = 1;
}

message Item {
    string id = 1;
    string name = 2;
    Item item_type = 3;
    map<string, string> info = 4;
}

message Collection {
    string id = 1;
    string name = 2;

    // Collection of Items (can be repeated zero or more times)
    repeated Item items = 3;
}

message ListCollectionsRequest {
    string request_id = 1;
}

message GetCollectionRequest {
    string request_id = 1;
    string collection_id = 2;
}

service CollectionService {
    // COLLECTION MANAGEMENT
    // ListCollections gets all collections of a user...
    rpc ListCollections(ListCollectionsRequest) returns (stream Collection);
    
    // CreateCollection creates a collection
    rpc CreateCollection(Collection) returns (Collection) {};
    
    // GetCollection get a given collection given a string (the collection's ID)
    rpc GetCollection(GetCollectionRequest) returns (Collection) {};

    // // Item Management
    // rpc AddItem(Item) returns (Item) {};
}